--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" id="bookPages">
                 </div>
                 <div class="input4">
-                    <input type="submit" value="Add" id="inputButton">
+                    <button id="inputButton">Add</button>
             </div>
             </form>
             <div class="bookContainer">
